--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -136,6 +136,7 @@ main  {
 .spotlight-container {
 
   display: flex;
+  flex-direction: column;
   
 }
 footer {
